Fix spacing and design, act five act two (image rounded corners)

--- a/files/style.css
+++ b/files/style.css
@@ -47,6 +47,10 @@ div.img {
     border-radius: 3px;
 }
 
+img {
+    border-radius: 3px;
+}
+
 div.img p, div.img a, div.img ul {
     display: none;
 }
